[package]
name = "ircv3_tags"
version = "1.0.0"
authors = ["m3id"]
edition = "2021"
description = "only IRCv3 tag part parse"
repository = "https://github.com/m3idnotfree/ircv3_tags"
license = "MIT"
keywords = ["ircv3", "twitch", "tag"]

[lib]
name = "ircv3_tags"
path = "src/lib.rs"

[dependencies]
nom = "8.0.0"
