[package]
name = "ircv3_tags"
version = "2.1.2"
authors = ["m3id"]
edition = "2021"
description = "Zero-copy parser for IRCv3 message tags"
repository = "https://github.com/m3idnotfree/ircv3_tags"
license = "MIT"
keywords = ["ircv3", "twitch", "irc", "parser", "chat"]
categories = ["parser-implementations", "network-programming"]
readme = "README.md"
documentation = "https://docs.rs/ircv3_tags"

[lib]
name = "ircv3_tags"
path = "src/lib.rs"

[features]
allow-underdash_key_name = []
allow-underdash_host = []

[dependencies]
nom = "8.0.0"
